updated .gitignore to ignore pychache

--- a/notebooks/Example.ipynb
+++ b/notebooks/Example.ipynb
@@ -1090,15 +1090,29 @@
    "outputs": [],
    "source": [
     "def get_face_bounds(img):\n",
+    "\n",
     "    detector = MTCNN()\n",
     "    image = plt.imread(os.path.join(images_dir, img))\n",
     "    faces = detector.detect_faces(image)\n",
+    "    img = np.array(img)\n",
     "    print(faces)\n",
     "    bounds = []\n",
+    "    img = np.array(image)\n",
+    "    bounding_box = faces[0]['box']\n",
+    "    keypoints = faces[0]['keypoints']\n",
     "    for (x, y, w, h) in [face['box'] for  face in faces]:\n",
-    "        bounding_box = cv2.rectangle(image, (x, y), (x+w, y+h), (0, 255, 0), 5)\n",
-    "        plt.imshow(bounding_box)\n",
-    "        bounds.append(bounding_box)\n",
+    "        cv2.rectangle(img,\n",
+    "              (bounding_box[0], bounding_box[1]),\n",
+    "              (bounding_box[0]+bounding_box[2], bounding_box[1] + bounding_box[3]),\n",
+    "              (0,155,255),\n",
+    "              19)\n",
+    "        cv2.circle(img,(keypoints['left_eye']), 2, (0,155,255), 19)\n",
+    "        cv2.circle(img,(keypoints['right_eye']), 2, (0,155,255), 19)\n",
+    "        cv2.circle(img,(keypoints['nose']), 2, (0,155,255), 19)\n",
+    "        cv2.circle(img,(keypoints['mouth_left']), 2, (0,155,255), 19)\n",
+    "        cv2.circle(img,(keypoints['mouth_right']), 2, (0,155,255), 19)\n",
+    "        plt.imshow(img)\n",
+    "        bounds.append(img)\n",
     "\n",
     "    return bounds"
    ]
