pre-pull commit

--- a/notebooks/Mask Detection in Images.ipynb
+++ b/notebooks/Mask Detection in Images.ipynb
@@ -20,7 +20,7 @@
     "2. Install dependencies:\n",
     "``` sh\n",
     "$ conda install -c anaconda xlrd xlwt scikit-learn seaborn\n",
-    "$ conda install mtcnn ipyparallel\n",
+    "$ conda install mtcnn ipyparallel validators\n",
     "$ pip install python-opencv\n",
     "```"
    ]
