--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -1,6 +1,292 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-10T18:47:14.364024Z",
+     "start_time": "2020-11-10T18:47:08.179631Z"
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import os\n",
+    "from mtcnn.mtcnn import MTCNN\n",
+    "from tensorflow.keras.preprocessing.image import img_to_array\n",
+    "from tensorflow.keras.models import load_model\n",
+    "from tensorflow.keras.applications.mobilenet_v2 import preprocess_input\n",
+    "import numpy as np\n",
+    "\n",
+    "from IPython.display import clear_output\n",
+    "import time\n",
+    "import PIL.Image\n",
+    "from io import BytesIO\n",
+    "import IPython.display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-10T18:47:14.392498Z",
+     "start_time": "2020-11-10T18:47:14.366206Z"
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "NOTEBOOK_DIR = !pwd\n",
+    "NOTEBOOK_DIR = NOTEBOOK_DIR[0]\n",
+    "ROOT_DIR = os.path.abspath(os.path.join(NOTEBOOK_DIR, os.pardir))\n",
+    "DATA_DIR = os.path.join(ROOT_DIR, 'data')\n",
+    "\n",
+    "MNM_MODEL_DIR = os.path.join(ROOT_DIR, 'models/keras_sequential_model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-10T18:47:14.402802Z",
+     "start_time": "2020-11-10T18:47:14.396927Z"
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Use 'jpeg' instead of 'png' (~5 times faster)\n",
+    "def array_to_image(a, fmt='jpeg'):\n",
+    "    #Create binary stream object\n",
+    "    f = BytesIO()\n",
+    "\n",
+    "    #Convert array to binary stream object\n",
+    "    PIL.Image.fromarray(a).save(f, fmt)\n",
+    "\n",
+    "    return IPython.display.Image(data=f.getvalue())\n",
+    "\n",
+    "def get_frame(cam):\n",
+    "    # Capture frame-by-frame\n",
+    "    ret, frame = cam.read()\n",
+    "\n",
+    "    #flip image for natural viewing\n",
+    "    frame = cv2.flip(frame, 1)\n",
+    "\n",
+    "    return frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-10T18:47:14.412219Z",
+     "start_time": "2020-11-10T18:47:14.408649Z"
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# cam = cv2.VideoCapture(0)\n",
+    "\n",
+    "# d = IPython.display.display(\"\", display_id=1)\n",
+    "# d2 = IPython.display.display(\"\", display_id=2)\n",
+    "# while True:\n",
+    "#     try:\n",
+    "#         t1 = time.time()\n",
+    "#         frame = get_frame(cam)\n",
+    "#         frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "#         im = array_to_image(frame)\n",
+    "\n",
+    "#         d.update(im)\n",
+    "\n",
+    "#         t2 = time.time()\n",
+    "\n",
+    "#         s = f\"\"\"{int(1/(t2-t1))} FPS\"\"\"\n",
+    "#         d2.update( IPython.display.HTML(s) )\n",
+    "#     except KeyboardInterrupt:\n",
+    "#         print()\n",
+    "#         cam.release()\n",
+    "#         IPython.display.clear_output()\n",
+    "#         print (\"Stream stopped\")\n",
+    "#         break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-10T18:47:43.988904Z",
+     "start_time": "2020-11-10T18:47:36.019280Z"
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-6-6584dabd71f2>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[0;32mwhile\u001B[0m \u001B[0;32mTrue\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      3\u001B[0m     \u001B[0;31m#Capture frame-by-frame\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 4\u001B[0;31m     \u001B[0m__\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mframe\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mcap\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mread\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      5\u001B[0m \u001B[0;31m#     frame = get_frame(cap)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      6\u001B[0m     \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mframe\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "cap = cv2.VideoCapture(0)\n",
+    "while True: \n",
+    "    #Capture frame-by-frame\n",
+    "    __, frame = cap.read()\n",
+    "#     frame = get_frame(cap)\n",
+    "    print(frame)\n",
+    "    if frame is not None:\n",
+    "        frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "        image = array_to_image(frame)\n",
+    "\n",
+    "        #Use MTCNN to detect faces\n",
+    "        result = detector.detect_faces(image)\n",
+    "        if result != []:\n",
+    "\n",
+    "            for person in result:\n",
+    "                bounding_box = person['box']\n",
+    "                keypoints = person['keypoints']\n",
+    "\n",
+    "                cv2.rectangle(frame,\n",
+    "                              (bounding_box[0], bounding_box[1]),\n",
+    "                              (bounding_box[0]+bounding_box[2], bounding_box[1] + bounding_box[3]),\n",
+    "                              (0,155,255),\n",
+    "                              2)\n",
+    "\n",
+    "                cv2.circle(frame,(keypoints['left_eye']), 2, (0,155,255), 2)\n",
+    "                cv2.circle(frame,(keypoints['right_eye']), 2, (0,155,255), 2)\n",
+    "                cv2.circle(frame,(keypoints['nose']), 2, (0,155,255), 2)\n",
+    "                cv2.circle(frame,(keypoints['mouth_left']), 2, (0,155,255), 2)\n",
+    "                cv2.circle(frame,(keypoints['mouth_right']), 2, (0,155,255), 2)\n",
+    "        #display resulting frame\n",
+    "        cv2.imshow('frame',frame)\n",
+    "        if cv2.waitKey(1) &0xFF == ord('q'):\n",
+    "            break\n",
+    "#When everything's done, release capture\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
