live feed is getting there... some issues still, but such is life

--- a/notebooks/Mask Detection.ipynb
+++ b/notebooks/Mask Detection.ipynb
@@ -2,23 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-10T17:54:51.271281Z",
-     "start_time": "2020-11-10T17:54:45.869575Z"
+     "end_time": "2020-11-10T22:31:03.899660Z",
+     "start_time": "2020-11-10T22:31:03.845591Z"
     },
     "code_folding": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# our nice list of imports is in here\n",
     "#i hate this, but the notebook won't recognize our custom modules w/o it\n",
@@ -42,6 +34,12 @@
     "import sklearn\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from mtcnn.mtcnn import MTCNN\n",
+    "from IPython.display import clear_output\n",
+    "from tensorflow.keras.preprocessing.image import img_to_array\n",
+    "from tensorflow.keras.models import load_model\n",
+    "from tensorflow.keras.applications.mobilenet_v2 import preprocess_input\n",
+    "\n",
+    "\n",
     "import seaborn as sns\n",
     "%matplotlib inline\n",
     "sns.set_style(\"darkgrid\")"
@@ -85,11 +83,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-10T17:55:08.437392Z",
-     "start_time": "2020-11-10T17:55:08.395234Z"
+     "end_time": "2020-11-10T22:31:05.299392Z",
+     "start_time": "2020-11-10T22:31:05.270335Z"
     }
    },
    "outputs": [],
@@ -118,11 +116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-10T17:55:09.961019Z",
-     "start_time": "2020-11-10T17:55:09.882744Z"
+     "end_time": "2020-11-10T22:31:06.945917Z",
+     "start_time": "2020-11-10T22:31:06.889716Z"
     }
    },
    "outputs": [
@@ -277,7 +275,7 @@
        "[15412 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,11 +293,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-10T17:55:10.651044Z",
-     "start_time": "2020-11-10T17:55:10.624094Z"
+     "end_time": "2020-11-10T22:31:07.817843Z",
+     "start_time": "2020-11-10T22:31:07.794603Z"
     }
    },
    "outputs": [
@@ -454,7 +452,7 @@
        "[3165 rows x 6 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,21 +478,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-10T17:55:12.047607Z",
-     "start_time": "2020-11-10T17:55:11.866441Z"
+     "end_time": "2020-11-10T22:31:08.726031Z",
+     "start_time": "2020-11-10T22:31:08.556596Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fce1b65eac8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fce1e64f048>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -540,11 +538,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-10T17:55:13.409198Z",
-     "start_time": "2020-11-10T17:55:13.381226Z"
+     "end_time": "2020-11-10T22:31:10.523503Z",
+     "start_time": "2020-11-10T22:31:10.505416Z"
     }
    },
    "outputs": [
@@ -710,7 +708,7 @@
        "[5749 rows x 6 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,21 +722,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-10T17:56:07.436196Z",
-     "start_time": "2020-11-10T17:56:06.234897Z"
+     "end_time": "2020-11-10T22:31:18.245303Z",
+     "start_time": "2020-11-10T22:31:16.761189Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fce1e79f7b8>"
+       "<matplotlib.image.AxesImage at 0x7fce1f208b70>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -765,14 +763,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-10T17:42:35.687524Z",
-     "start_time": "2020-11-10T17:42:34.199Z"
+     "end_time": "2020-11-10T23:55:24.641587Z",
+     "start_time": "2020-11-10T22:31:19.883209Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5749"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# the REAL data we care about is the image data within the bounding\n",
     "# boxes specified in the `train` dataframe\n",
@@ -805,7 +814,18 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "x=[]\n",
+    "y=[]\n",
+    "for features, labels in data:\n",
+    "    x.append(features)\n",
+    "    y.append(labels)\n",
+    "\n",
+    "# print(y)\n",
+    "lbl=LabelEncoder()\n",
+    "y=lbl.fit_transform(y)\n",
+    "y.shape\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -817,7 +837,13 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "x = np.array(x).reshape(-1, 50, 50, 1)\n",
+    "x = tf.keras.utils.normalize(x, axis=1)\n",
+    "from keras.utils import to_categorical\n",
+    "y = to_categorical(y)\n",
+    "y\n"
+   ]
   },
   {
    "cell_type": "code",
