--- a/notebooks/live_feed_with_trained_Keras_model.ipynb
+++ b/notebooks/live_feed_with_trained_Keras_model.ipynb
@@ -32,17 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-<<<<<<< HEAD
-   "metadata": {},
-=======
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-10T20:03:56.425533Z",
      "start_time": "2020-11-10T20:03:51.471521Z"
     }
    },
->>>>>>> bcc302798d0c6f5e6b11913961e9d73bf791bec6
    "outputs": [
     {
      "name": "stderr",
@@ -84,17 +80,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-<<<<<<< HEAD
-   "metadata": {},
-=======
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-10T20:03:56.456147Z",
      "start_time": "2020-11-10T20:03:56.427531Z"
     }
    },
->>>>>>> bcc302798d0c6f5e6b11913961e9d73bf791bec6
    "outputs": [],
    "source": [
     "NOTEBOOK_DIR = !pwd\n",
@@ -110,23 +102,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-<<<<<<< HEAD
-   "metadata": {},
-=======
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-10T20:03:56.584505Z",
      "start_time": "2020-11-10T20:03:56.458617Z"
     }
    },
->>>>>>> bcc302798d0c6f5e6b11913961e9d73bf791bec6
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/brtonnies/ArtificialIntelligence/face-mask-detection/notebooks\r\n"
+      "/Users/kellymcgaw/Desktop/AI_class/face-mask-detection/notebooks\r\n"
      ]
     }
    ],
@@ -136,13 +124,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-=======
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-10T20:03:56.594871Z",
@@ -153,10 +135,10 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/brtonnies/ArtificialIntelligence/face-mask-detection/models/keras_mask_or_no_mask_model'"
+       "'/Users/kellymcgaw/Desktop/AI_class/face-mask-detection/models/keras_mask_or_no_mask_model'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,148 +146,99 @@
    "source": [
     "MNM_MODEL_DIR"
    ]
->>>>>>> bcc302798d0c6f5e6b11913961e9d73bf791bec6
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-10T20:16:42.506761Z",
      "start_time": "2020-11-10T20:16:36.936947Z"
     }
    },
-   "outputs": [
-    {
-<<<<<<< HEAD
-     "ename": "NameError",
-     "evalue": "name 'count' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-481a6d1e6c9b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     31\u001b[0m             \u001b[0mbounding_box\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mface\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'box'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m             \u001b[0mkeypoints\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mface\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'keypoints'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m             \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbounding_box\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbounding_box\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'count' is not defined"
-=======
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "[{'box': [2909, 195, 20, 25], 'confidence': 0.9998680353164673, 'keypoints': {'left_eye': (2915, 204), 'right_eye': (2925, 204), 'nose': (2920, 210), 'mouth_left': (2915, 213), 'mouth_right': (2924, 214)}}, {'box': [557, 62, 70, 87], 'confidence': 0.9998065829277039, 'keypoints': {'left_eye': (578, 93), 'right_eye': (612, 94), 'nose': (596, 113), 'mouth_left': (577, 124), 'mouth_right': (610, 125)}}, {'box': [868, 64, 49, 64], 'confidence': 0.7396073341369629, 'keypoints': {'left_eye': (879, 89), 'right_eye': (901, 88), 'nose': (887, 101), 'mouth_left': (882, 116), 'mouth_right': (899, 116)}}]\n",
-      "(1, 50, 50, 3)\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'color' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-18-79fe458718ec>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m    100\u001B[0m \u001B[0;31m#                     cv2.FONT_HERSHEY_SIMPLEX, 0.45, color, 2)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    101\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 102\u001B[0;31m         \u001B[0mcv2\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mrectangle\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mframe\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m(\u001B[0m\u001B[0mx\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0my\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m(\u001B[0m\u001B[0mx\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0mw\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0my\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0mh\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0mcolor\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;36m2\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    103\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    104\u001B[0m         \u001B[0;31m# Display the resulting frame\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'color' is not defined"
->>>>>>> bcc302798d0c6f5e6b11913961e9d73bf791bec6
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "\"\"\"To Detect Faces with Haar Cascade\"\"\"\n",
+    "import cv2\n",
+    "import os\n",
+    "cascPath = os.path.dirname(\n",
+    "    cv2.__file__) + \"/data/haarcascade_frontalface_alt2.xml\"\n",
+    "faceCascade = cv2.CascadeClassifier(cascPath)\n",
+    "video_capture = cv2.VideoCapture(0)\n",
+    "while True:\n",
+    "    # Capture frame-by-frame\n",
+    "    ret, frame = video_capture.read()\n",
+    "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "    faces = faceCascade.detectMultiScale(gray,\n",
+    "                                         scaleFactor=1.1,\n",
+    "                                         minNeighbors=5,\n",
+    "                                         minSize=(60, 60),\n",
+    "                                         flags=cv2.CASCADE_SCALE_IMAGE)\n",
+    "    for (x,y,w,h) in faces:\n",
+    "        cv2.rectangle(frame, (x, y), (x + w, y + h),(0,255,0), 2)\n",
+    "        # Display the resulting frame\n",
+    "    cv2.imshow('Video', frame)\n",
+    "    if cv2.waitKey(1) &0xFF == ord('q'):\n",
+    "        break\n",
+    "video_capture.release()\n",
+    "cv2.destroyAllWindows()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"To Detect Faces with Masks and Label Them Accordingly with Haar Cascadea\"\"\"\n",
     "import cv2\n",
     "import os\n",
     "from tensorflow.keras.preprocessing.image import img_to_array\n",
     "from tensorflow.keras.models import load_model\n",
     "from tensorflow.keras.applications.mobilenet_v2 import preprocess_input\n",
     "import numpy as np\n",
-    "from mtcnn.mtcnn import MTCNN\n",
-    "\n",
-    "\n",
     " \n",
-    "# cascPath = os.path.dirname(\n",
-    "#     cv2.__file__) + \"/data/haarcascade_frontalface_alt2.xml\"\n",
-    "# faceCascade = cv2.CascadeClassifier(cascPath)\n",
-    "model = load_model(MNM_MODEL_DIR)\n",
-    "detector = MTCNN()\n",
-<<<<<<< HEAD
+    "cascPath = os.path.dirname(\n",
+    "    cv2.__file__) + \"/data/haarcascade_frontalface_alt2.xml\"\n",
+    "faceCascade = cv2.CascadeClassifier(cascPath)\n",
+    "model = load_model(\"mask_recog1.h5\")\n",
+    " \n",
     "video_capture = cv2.VideoCapture(0)\n",
-=======
-    " \n",
-    "video_capture = cv2.VideoCapture(\"/Users/brtonnies/Desktop/Screen Recording 2020-11-04 at 5.55.09 PM.mov\")\n",
-    "print(video_capture.isOpened())\n",
-    "ret, frame = video_capture.read()\n",
->>>>>>> bcc302798d0c6f5e6b11913961e9d73bf791bec6
     "while True:\n",
     "    # Capture frame-by-frame\n",
     "    ret, frame = video_capture.read()\n",
     "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
-    "#     faces = faceCascade.detectMultiScale(gray,\n",
-    "#                                          scaleFactor=1.1,\n",
-    "#                                          minNeighbors=5,\n",
-    "#                                          minSize=(60, 60),\n",
-    "#                                          flags=cv2.CASCADE_SCALE_IMAGE)\n",
-    "    faces = detector.detect_faces(frame)\n",
-<<<<<<< HEAD
+    "    faces = faceCascade.detectMultiScale(gray,\n",
+    "                                         scaleFactor=1.1,\n",
+    "                                         minNeighbors=5,\n",
+    "                                         minSize=(60, 60),\n",
+    "                                         flags=cv2.CASCADE_SCALE_IMAGE)\n",
     "    faces_list=[]\n",
     "    preds=[]\n",
-    "    faces = detector.detect_faces(frame)\n",
-    "    if faces != []:\n",
-    "        data = list()\n",
-    "        results = list()\n",
-    "        for face in faces:\n",
-    "            bounding_box = face['box']\n",
-    "            keypoints = face['keypoints']\n",
-    "            data.append([count, bounding_box])\n",
-    "                \n",
-    "            x, y, w, h = bounding_box\n",
-    "            img = frame[y:y+h,x:x+w]\n",
-    "            if img != []:\n",
-    "                new_img = cv2.resize(img,(50,50))\n",
-    "                new_img = new_img.reshape(-1,50,50,1)\n",
-    "                prediction = model.predict(new_img)\n",
-    "                print(\"PREDICTION: {}\".format(prediction))\n",
-    "                results.append([count, bounding_box, prediction])\n",
-    "                cv2.rectangle(frame,\n",
-    "                              (x, y),\n",
-    "                              (x+w, y + h),\n",
-    "                              (0,155,255),\n",
-    "                              2)\n",
-    "\n",
-    "                cv2.circle(frame,(keypoints['left_eye']), 2, (0,155,255), 2)\n",
-    "                cv2.circle(frame,(keypoints['right_eye']), 2, (0,155,255), 2)\n",
-    "                cv2.circle(frame,(keypoints['nose']), 2, (0,155,255), 2)\n",
-    "                cv2.circle(frame,(keypoints['mouth_left']), 2, (0,155,255), 2)\n",
-    "                cv2.circle(frame,(keypoints['mouth_right']), 2, (0,155,255), 2)\n",
-=======
-    "    print(faces)\n",
-    "    faces_list=[]\n",
-    "    preds=[]\n",
-    "    for (x, y, w, h) in [face['box'] for face in faces]:\n",
+    "    for (x, y, w, h) in faces:\n",
     "        face_frame = frame[y:y+h,x:x+w]\n",
     "        face_frame = cv2.cvtColor(face_frame, cv2.COLOR_BGR2RGB)\n",
-    "        face_frame = np.asarray(cv2.resize(face_frame, (50,50)))\n",
+    "        face_frame = cv2.resize(face_frame, (224, 224))\n",
     "        face_frame = img_to_array(face_frame)\n",
     "        face_frame = np.expand_dims(face_frame, axis=0)\n",
     "        face_frame =  preprocess_input(face_frame)\n",
-    "        print(face_frame.shape)\n",
-    "#         preds.append(model.predict(face_frame))\n",
     "        faces_list.append(face_frame)\n",
-    "#         if len(faces_list)>0:\n",
-    "#             preds = model.predict(faces_list)\n",
-    "#         for pred in preds:\n",
-    "#             (mask, withoutMask) = pred\n",
-    "#         label = \"Mask\" if mask > withoutMask else \"No Mask\"\n",
-    "#         color = (0, 255, 0) if label == \"Mask\" else (0, 0, 255)\n",
-    "#         label = \"{}: {:.2f}%\".format(label, max(mask, withoutMask) * 100)\n",
-    "\n",
-    "#         cv2.putText(frame, label, (x, y- 10),\n",
-    "#                     cv2.FONT_HERSHEY_SIMPLEX, 0.45, color, 2)\n",
+    "        if len(faces_list)>0:\n",
+    "            preds = model.predict(faces_list)\n",
+    "        for pred in preds:\n",
+    "            (mask, withoutMask) = pred\n",
+    "        label = \"Mask\" if mask > withoutMask else \"No Mask\"\n",
+    "        color = (0, 255, 0) if label == \"Mask\" else (0, 0, 255)\n",
+    "        label = \"{}: {:.2f}%\".format(label, max(mask, withoutMask) * 100)\n",
+    "        cv2.putText(frame, label, (x, y- 10),\n",
+    "                    cv2.FONT_HERSHEY_SIMPLEX, 0.45, color, 2)\n",
     " \n",
     "        cv2.rectangle(frame, (x, y), (x + w, y + h),color, 2)\n",
-    "\n",
->>>>>>> bcc302798d0c6f5e6b11913961e9d73bf791bec6
     "        # Display the resulting frame\n",
     "    cv2.imshow('Video', frame)\n",
     "    if cv2.waitKey(1) &0xFF == ord('q'):\n",
     "        break\n",
-    "\n",
     "video_capture.release()\n",
     "cv2.destroyAllWindows()"
    ]
@@ -315,14 +248,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"To Detect Faces using MTCNN\"\"\"\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "while True: \n",
+    "    #Capture frame-by-frame\n",
+    "    __, frame = cap.read()\n",
+    "    \n",
+    "    #Use MTCNN to detect faces\n",
+    "    result = detector.detect_faces(frame)\n",
+    "    if result != []:\n",
+    "        for person in result:\n",
+    "            bounding_box = person['box']\n",
+    "            keypoints = person['keypoints']\n",
+    "    \n",
+    "            cv2.rectangle(frame,\n",
+    "                          (bounding_box[0], bounding_box[1]),\n",
+    "                          (bounding_box[0]+bounding_box[2], bounding_box[1] + bounding_box[3]),\n",
+    "                          (0,155,255),\n",
+    "                          2)\n",
+    "    \n",
+    "            cv2.circle(frame,(keypoints['left_eye']), 2, (0,155,255), 2)\n",
+    "            cv2.circle(frame,(keypoints['right_eye']), 2, (0,155,255), 2)\n",
+    "            cv2.circle(frame,(keypoints['nose']), 2, (0,155,255), 2)\n",
+    "            cv2.circle(frame,(keypoints['mouth_left']), 2, (0,155,255), 2)\n",
+    "            cv2.circle(frame,(keypoints['mouth_right']), 2, (0,155,255), 2)\n",
+    "    #display resulting frame\n",
+    "    cv2.imshow('frame',frame)\n",
+    "    if cv2.waitKey(1) &0xFF == ord('q'):\n",
+    "        break\n",
+    "#When everything's done, release capture\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
   },
   {
    "cell_type": "code",
