pre-pull commit: it's a new day '

--- a/notebooks/Example.ipynb
+++ b/notebooks/Example.ipynb
@@ -62,7 +62,12 @@
     "from keras.models import Sequential        # keras is only compatible with python 3.6 or lower\n",
     "import sklearn\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from mtcnn.mtcnn import MTCNN"
+    "from mtcnn.mtcnn import MTCNN\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "import lib\n",
+    "from lib import utils"
    ]
   },
   {
