haar_cascade attempt, over-predicting

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2020-11-11T02:01:08.637Z"
@@ -196,7 +196,20 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 3, got 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-6f1cd588589c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;31m#Use MTCNN to detect faces\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mfaces\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdetector\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetect_faces\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrayFrame\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mfaces\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/mm/lib/python3.6/site-packages/mtcnn/mtcnn.py\u001b[0m in \u001b[0;36mdetect_faces\u001b[0;34m(self, img)\u001b[0m\n\u001b[1;32m    287\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mInvalidImage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Image not valid.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    288\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 289\u001b[0;31m         \u001b[0mheight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    290\u001b[0m         \u001b[0mstage_status\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mStageStatus\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mheight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    291\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 3, got 2)"
+     ]
+    }
+   ],
    "source": [
     "CYAN = (0, 255, 255)\n",
     "GREEN = (0, 255, 0)\n",
@@ -213,11 +226,11 @@
     "#     frame = get_frame(cap)\n",
     "\n",
     "    if frame is not None:\n",
-    "        gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "        grayFrame = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "#         image = array_to_image(frame)\n",
     "\n",
     "        #Use MTCNN to detect faces\n",
-    "        faces = detector.detect_faces(frame)\n",
+    "        faces = detector.detect_faces(grayFrame)\n",
     "        if faces != []:\n",
     "            \n",
     "            data = list()\n",
@@ -350,7 +363,112 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "CYAN = (0, 255, 255)\n",
+    "GREEN = (0, 255, 0)\n",
+    "MAGENTA = (255, 0, 255)\n",
+    "\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "rval, frame = cap.read()\n",
+    "\n",
+    "session_data = list()\n",
+    "count = 1\n",
+    "while cap.isOpened(): \n",
+    "    #Capture frame-by-frame\n",
+    "#     ret, frame = cap.read()\n",
+    "#     frame = get_frame(cap)\n",
+    "\n",
+    "    if frame is not None:\n",
+    "        grayFrame = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "#         image = array_to_image(frame)\n",
+    "\n",
+    "        #Use MTCNN to detect faces\n",
+    "        faces = detector.detect_faces(grayFrame)\n",
+    "        if faces != []:\n",
+    "            \n",
+    "            data = list()\n",
+    "            results = list()\n",
+    "            frame_df = pd.DataFrame()\n",
+    "            for face in faces:\n",
+    "#                 data.append([count, face['box']])\n",
+    "                bounding_box = face['box']\n",
+    "                keypoints = face['keypoints']\n",
+    "                x, y, w, h = bounding_box\n",
+    "                img = frame[y:y+h,x:x+w]\n",
+    "\n",
+    "                try:\n",
+    "                    new_img = cv2.resize(img, (50, 50))\n",
+    "                    new_img = new_img.reshape(-1, 50, 50, 1)\n",
+    "                except Exception as e:\n",
+    "                    print(str(e))\n",
+    "                prediction = model.predict(new_img)\n",
+    "#                 print(prediction)\n",
+    "#                 print(\"PREDICTION: {}\".format(labeler.inverse_transform(prediction)))\n",
+    "                data.append([count, bounding_box, prediction])\n",
+    "                \n",
+    "                cv2.circle(frame,(keypoints['left_eye']), 2, CYAN, 2)\n",
+    "                cv2.circle(frame,(keypoints['right_eye']), 2, CYAN, 2)\n",
+    "                cv2.circle(frame,(keypoints['nose']), 2, CYAN, 2)\n",
+    "                cv2.circle(frame,(keypoints['mouth_left']), 2, CYAN, 2)\n",
+    "                cv2.circle(frame,(keypoints['mouth_right']), 2, CYAN, 2)\n",
+    "                \n",
+    "            print(data)\n",
+    "            results += [i for i in data if len(i) == 1]\n",
+    "            results += [[j for j in i] for i in data if len(i) > 1]\n",
+    "\n",
+    "#             print(results)\n",
+    "            image = []\n",
+    "            classname = []\n",
+    "            for k, i, j in results:\n",
+    "                cn = np.argmax(j)\n",
+    "                classname.append(cn if cn < 2 else 0)\n",
+    "                image.append(i)\n",
+    "            \n",
+    "            \n",
+    "            print(\"FRAME NO.: {}\\nCLASSNAME ARGMAX: {}\\nINVERSE TRANSFORM: {}\\n\".format(\n",
+    "                count, classname, labeler.inverse_transform(classname)\n",
+    "            ))\n",
+    "            frame_df['image'] = image\n",
+    "            frame_df['classname'] = classname\n",
+    "            frame_df['classname'] = labeler.inverse_transform(frame_df['classname'])\n",
+    "            print(frame_df)\n",
+    "\n",
+    "\n",
+    "            for i in range(len(frame_df)):\n",
+    "                x, y, w, h = frame_df.iloc[i]['image']\n",
+    "                cname = str(frame_df.iloc[i]['classname'])\n",
+    "               \n",
+    "                if cname == 'face_with_mask':\n",
+    "                    label = \"Mask\"\n",
+    "                else:\n",
+    "                    label = \"No Mask\"\n",
+    "                color = (0, 255, 0) if label == 'Mask' else (255,0,0)\n",
+    "                cv2.putText(frame, label, (x, y- 10),\n",
+    "                    cv2.FONT_HERSHEY_SIMPLEX, 0.45, color, 4)\n",
+    "                        \n",
+    "                cv2.rectangle(frame, (x, y), (x + w, y + h),color, 2)\n",
+    "\n",
+    "            session_data.append(results)\n",
+    "\n",
+    "\n",
+    "        #display resulting frame\n",
+    "        frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "        cv2.imshow('frame', frame)\n",
+    "#         plt.imshow(frame, interpolation = 'bicubic')\n",
+    "#         print(frame.shape)\n",
+    "        \n",
+    "\n",
+    "    ret, frame = cap.read()\n",
+    "    clear_output(wait=True)\n",
+    "    count += 1\n",
+    "    if cv2.waitKey(1) &0xFF == ord('q'):\n",
+    "        break\n",
+    "#When everything's done, release capture\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n",
+    "\n",
+    "# exception at frame 16-17"
+   ]
   }
  ],
  "metadata": {
