--- a/notebooks/live_feed_with_trained_Keras_model.ipynb
+++ b/notebooks/live_feed_with_trained_Keras_model.ipynb
@@ -32,22 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-10T20:03:56.425533Z",
      "start_time": "2020-11-10T20:03:51.471521Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -73,14 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ROOT_DIR = os.path.abspath(os.path.join(NOTEBOOK_DIR, os.pardir))\n",
+    "# print(ROOT_DIR)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-10T20:03:56.456147Z",
@@ -97,12 +92,16 @@
     "ANNOTATIONS_DIR = os.path.join(DATA_DIR, 'annotations')\n",
     "SUB_IMAGES_DIR = os.path.join(IMAGES_DIR, 'sub')\n",
     "MODEL_DIR = os.path.join(ROOT_DIR, 'models')\n",
-    "MNM_MODEL_DIR = os.path.join(MODEL_DIR, 'keras_mask_or_no_mask_model')\n"
+    "MNM_MODEL_DIR = os.path.join(MODEL_DIR, 'keras_mask_or_no_mask_model')\n",
+    "HC_MODEL_DIR = os.path.join(MODEL_DIR, 'mask_recog_ver2.h5')\n",
+    "HC_DATA_DIR = os.path.join(DATA_DIR, 'haar_cascades')\n",
+    "HC_FRONTAL_FACE_DIR = os.path.join(HC_DATA_DIR, \n",
+    "                                   'haarcascade_frontalface_default.xml')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-10T20:03:56.584505Z",
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-10T20:03:56.594871Z",
@@ -138,7 +137,7 @@
        "'/Users/kellymcgaw/Desktop/AI_class/face-mask-detection/models/keras_mask_or_no_mask_model'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,11 +186,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-10-f34722dcf036>, line 15)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-f34722dcf036>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    video_capture = cv2.VideoCapture(0)\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\"To Detect Faces with Masks and Label Them Accordingly with Haar Cascadea\"\"\"\n",
+    "\"\"\"To Detect Faces with Masks and Label Them Accordingly\"\"\"\n",
     "import cv2\n",
     "import os\n",
     "from tensorflow.keras.preprocessing.image import img_to_array\n",
@@ -199,10 +207,11 @@
     "from tensorflow.keras.applications.mobilenet_v2 import preprocess_input\n",
     "import numpy as np\n",
     " \n",
-    "cascPath = os.path.dirname(\n",
-    "    cv2.__file__) + \"/data/haarcascade_frontalface_alt2.xml\"\n",
-    "faceCascade = cv2.CascadeClassifier(cascPath)\n",
-    "model = load_model(\"mask_recog1.h5\")\n",
+    "# cascPath = os.path.dirname(\n",
+    "#     cv2.__file__) + \"/data/haarcascade_frontalface_alt2.xml\"\n",
+    "# faceCascade = cv2.CascadeClassifier(cascPath)\n",
+    "faceCascade = cv2.CascadeClassifier(HC_FRONTAL_FACE_DIR)\n",
+    "model = load_model(MNM_MODEL_DIR\n",
     " \n",
     "video_capture = cv2.VideoCapture(0)\n",
     "while True:\n",
