commitment is key to a strong and healthy relationship

--- a/notebooks/Example.ipynb
+++ b/notebooks/Example.ipynb
@@ -1686,21 +1686,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2020-10-30T21:09:46.040Z"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def doStuff():\n",
+    "    year = input(\"What year?\")\n",
+    "    zodiac = \" \"\n",
+    "    n = int(year)\n",
+    "    a = n % 12\n",
+    "    zodiacSigns = [\"Monkey\", \"Rooster\", \"Dog\", \"Pig\", \"Rat\", \"Ox\", \"Tiger\", \"Rabbit\", \"Dragon\", \"Snake\", \"Horse\",\n",
+    "                   \"Sheep\"]\n",
+    "    if a ==0 or a/2 == 0:\n",
+    "        zodiac = zodiacSigns[a]\n",
+    "    elif a == 1:\n",
+    "        zodiac = zodiacSigns[a]\n",
+    "\n",
+    "    elif a == 2:\n",
+    "        zodiac = zodiacSigns[a]\n",
+    "\n",
+    "    elif a == 3:\n",
+    "        zodiac = zodiacSigns[a]\n",
+    "\n",
+    "    elif a == 4:\n",
+    "        zodiac = zodiacSigns[a]\n",
+    "\n",
+    "    elif a == 5:\n",
+    "        zodiac = zodiacSigns[a]\n",
+    "    elif a == 6:\n",
+    "        zodiac = zodiacSigns[a]\n",
+    "    elif a == 7:\n",
+    "        zodiac = zodiacSigns[a]\n",
+    "    elif a == 8:\n",
+    "        zodiac = zodiacSigns[a]\n",
+    "    elif a == 9:\n",
+    "        zodiac = zodiacSigns[a]\n",
+    "    elif a == 4:\n",
+    "        zodiac = zodiacSigns[a]\n",
+    "    elif a == 4:\n",
+    "        zodiac = zodiacSigns[a]\n",
+    "    elif a == 4:\n",
+    "        zodiac = zodiacSigns[a]\n",
+    "    print(a)\n",
+    "    print(zodiac)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What year?1731\n",
+      "3\n",
+      "Pig\n"
+     ]
+    }
+   ],
+   "source": [
+    "doStuff()"
+   ]
   },
   {
    "cell_type": "code",
