--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-11T02:01:12.982474Z",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-11T02:01:13.003582Z",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-11T02:01:13.012283Z",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-11T02:01:13.065567Z",
@@ -127,7 +127,7 @@
        "array(['face_no_mask', 'face_with_mask'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-11T02:01:14.490397Z",
@@ -160,11 +160,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[1., 0.],\n",
-       "       [0., 1.]], dtype=float32)"
+       "array([[0., 1.],\n",
+       "       [1., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2020-11-11T02:01:08.637Z"
@@ -198,15 +198,42 @@
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 3, got 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-6f1cd588589c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;31m#Use MTCNN to detect faces\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mfaces\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdetector\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetect_faces\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrayFrame\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mfaces\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/envs/mm/lib/python3.6/site-packages/mtcnn/mtcnn.py\u001b[0m in \u001b[0;36mdetect_faces\u001b[0;34m(self, img)\u001b[0m\n\u001b[1;32m    287\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mInvalidImage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Image not valid.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    288\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 289\u001b[0;31m         \u001b[0mheight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    290\u001b[0m         \u001b[0mstage_status\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mStageStatus\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mheight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    291\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 3, got 2)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[32, [634, 134, 219, 282], array([[1.0000000e+00, 0.0000000e+00],\n",
+      "       [1.0000000e+00, 0.0000000e+00],\n",
+      "       [1.0000000e+00, 0.0000000e+00],\n",
+      "       [0.0000000e+00, 1.0000000e+00],\n",
+      "       [9.5435713e-21, 1.0000000e+00],\n",
+      "       [1.0000000e+00, 0.0000000e+00],\n",
+      "       [7.3778331e-11, 1.0000000e+00],\n",
+      "       [0.0000000e+00, 1.0000000e+00],\n",
+      "       [1.0000000e+00, 0.0000000e+00],\n",
+      "       [1.0000000e+00, 3.9777218e-10],\n",
+      "       [0.0000000e+00, 1.0000000e+00],\n",
+      "       [1.0000000e+00, 0.0000000e+00],\n",
+      "       [1.0000000e+00, 0.0000000e+00],\n",
+      "       [1.0000000e+00, 0.0000000e+00],\n",
+      "       [0.0000000e+00, 1.0000000e+00],\n",
+      "       [3.2454518e-21, 1.0000000e+00],\n",
+      "       [1.0000000e+00, 0.0000000e+00],\n",
+      "       [1.0000000e+00, 0.0000000e+00],\n",
+      "       [1.0000000e+00, 0.0000000e+00],\n",
+      "       [0.0000000e+00, 1.0000000e+00],\n",
+      "       [1.0000000e+00, 0.0000000e+00],\n",
+      "       [1.0000000e+00, 0.0000000e+00],\n",
+      "       [0.0000000e+00, 1.0000000e+00],\n",
+      "       [1.0000000e+00, 0.0000000e+00],\n",
+      "       [1.0000000e+00, 0.0000000e+00],\n",
+      "       [0.0000000e+00, 1.0000000e+00],\n",
+      "       [1.0000000e+00, 0.0000000e+00]], dtype=float32)]]\n",
+      "FRAME NO.: 32\n",
+      "CLASSNAME ARGMAX: [0]\n",
+      "INVERSE TRANSFORM: ['face_no_mask']\n",
+      "\n",
+      "                  image     classname\n",
+      "0  [634, 134, 219, 282]  face_no_mask\n"
      ]
     }
    ],
@@ -226,7 +253,7 @@
     "#     frame = get_frame(cap)\n",
     "\n",
     "    if frame is not None:\n",
-    "        grayFrame = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "        grayFrame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
     "#         image = array_to_image(frame)\n",
     "\n",
     "        #Use MTCNN to detect faces\n",
@@ -244,7 +271,7 @@
     "                img = frame[y:y+h,x:x+w]\n",
     "\n",
     "                try:\n",
-    "                    new_img = cv2.resize(img, (50, 50))\n",
+    "                    new_img = cv2.resize(img, (150, 150))\n",
     "                    new_img = new_img.reshape(-1, 50, 50, 1)\n",
     "                except Exception as e:\n",
     "                    print(str(e))\n",
@@ -312,9 +339,7 @@
     "        break\n",
     "#When everything's done, release capture\n",
     "cap.release()\n",
-    "cv2.destroyAllWindows()\n",
-    "\n",
-    "# exception at frame 16-17"
+    "cv2.destroyAllWindows()"
    ]
   },
   {
@@ -336,24 +361,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2020-11-11T02:01:08.640Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "session_data"
    ]
