few more updates

--- a/notebooks/Mask Detection - Live.ipynb
+++ b/notebooks/Mask Detection - Live.ipynb
@@ -51,6 +51,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-11-17T22:00:36.009Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def extr_pmask(pred, face):\n",
+    "    \"\"\"\n",
+    "        @param pred is a prediction from our project model\n",
+    "        @param face is a face object returned from the MTCNN detector\n",
+    "        @return results after non-standard regularization\n",
+    "    \"\"\"\n",
+    "    p_mask = pred[0][1]\n",
+    "    p_nomask = pred[0][0]\n",
+    "    p_face = f['confidence']\n",
+    "    p_noface = 1 - p_face\n",
+    "    \n",
+    "    results = [\n",
+    "        (p_face * p_nomask) / p_face,\n",
+    "        (p_noface * p_mask) / p_face\n",
+    "    ]\n",
+    "    \n",
+    "    \n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 79,
    "metadata": {
     "ExecuteTime": {
@@ -73,32 +103,6 @@
     "+ We have two available facial detection algorithms: \n",
     "  1. Haar Cascade - faster detection, but only tuned for full, frontal views of faces.\n",
     "  2. MTCNN - slower detection, but returns extra features and can detect faces from a variety of angles -- not only the front.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-11-17T21:25:23.544854Z",
-     "start_time": "2020-11-17T21:25:23.541113Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def extr_pmask(pred, face):\n",
-    "    p_mask = pred[0][1]\n",
-    "    p_nomask = pred[0][0]\n",
-    "    p_face = f['confidence']\n",
-    "    p_noface = 1 - p_face\n",
-    "    \n",
-    "    results = [\n",
-    "        (p_face * p_nomask) / p_face,\n",
-    "        (p_noface * p_mask) / p_face\n",
-    "    ]\n",
-    "    \n",
-    "    \n",
-    "    return pred"
    ]
   },
   {
