final commit for project

--- a/notebooks/Presentation.ipynb
+++ b/notebooks/Presentation.ipynb
@@ -609,7 +609,27 @@
       "INFO:tensorflow:Assets written to: ../models/mnm/presentation/presentation2.checkpoint/assets\n",
       "786/786 [==============================] - 100s 127ms/step - loss: 0.3104 - acc: 0.8688 - val_loss: 0.2387 - val_acc: 0.9016\n",
       "Epoch 14/40\n",
-      "412/786 [==============>...............] - ETA: 39s - loss: 0.2889 - acc: 0.8738"
+      "785/786 [============================>.] - ETA: 0s - loss: 0.2942 - acc: 0.8755\n",
+      "Epoch 00014: val_loss did not improve from 0.23869\n",
+      "786/786 [==============================] - 111s 142ms/step - loss: 0.2940 - acc: 0.8757 - val_loss: 0.2437 - val_acc: 0.9016\n",
+      "Epoch 15/40\n",
+      "785/786 [============================>.] - ETA: 0s - loss: 0.2956 - acc: 0.8799\n",
+      "Epoch 00015: val_loss did not improve from 0.23869\n",
+      "786/786 [==============================] - 102s 130ms/step - loss: 0.2957 - acc: 0.8798 - val_loss: 0.2784 - val_acc: 0.8896\n",
+      "Epoch 16/40\n",
+      "785/786 [============================>.] - ETA: 0s - loss: 0.3005 - acc: 0.8801\n",
+      "Epoch 00016: val_loss did not improve from 0.23869\n",
+      "786/786 [==============================] - 89s 114ms/step - loss: 0.3006 - acc: 0.8800 - val_loss: 0.2564 - val_acc: 0.9046\n",
+      "Epoch 17/40\n",
+      "785/786 [============================>.] - ETA: 0s - loss: 0.3074 - acc: 0.8786\n",
+      "Epoch 00017: val_loss did not improve from 0.23869\n",
+      "786/786 [==============================] - 86s 109ms/step - loss: 0.3072 - acc: 0.8788 - val_loss: 0.2577 - val_acc: 0.8956\n",
+      "Epoch 18/40\n",
+      "785/786 [============================>.] - ETA: 0s - loss: 0.2969 - acc: 0.8827\n",
+      "Epoch 00018: val_loss did not improve from 0.23869\n",
+      "786/786 [==============================] - 90s 114ms/step - loss: 0.2969 - acc: 0.8826 - val_loss: 0.2614 - val_acc: 0.9016\n",
+      "Epoch 19/40\n",
+      "429/786 [===============>..............] - ETA: 37s - loss: 0.3022 - acc: 0.8767"
      ]
     }
    ],
